Fixed sidebar being behind content

--- a/CSS/aboutCSS.css
+++ b/CSS/aboutCSS.css
@@ -53,7 +53,7 @@ body {
   margin: 40px auto 0 auto;
   padding: 20px;
   position: relative;
-  z-index: 1; 
+  z-index: 900; 
 }
 .menu-container {
   position: fixed;
