--- a/CSS/projectsCSS.css
+++ b/CSS/projectsCSS.css
@@ -59,7 +59,7 @@ body {
   margin: 40px auto 0 auto;
   padding: 20px;
   position: relative;
-  z-index: 1;
+  z-index: 900;
   display: flex;
   flex-direction: column;
   align-items: center;
